--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -8,6 +8,6 @@
 <%- include('summary',{account : accounts.checking}) %>
 <%- include('summary',{account : accounts.credit}) %>
 
-<br><a href="/Transfer">Transfer</a>
+<br><a href="/services/Transfer">Transfer</a>
 
 <%- include('footer')%>
